handle websocket connection and video share, view video and scrolling, login and register, logout
